Website SMP Islam

--- a/assets/library.html
+++ b/assets/library.html
@@ -24,6 +24,7 @@
     }
     a{
       text-decoration: none;
+      color: black;
     }
   </style>
 <body>
@@ -68,6 +69,7 @@
                 <div class="card shadow-sm">
                   <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://i1.rgstatic.net/publication/336374802_Digital_Marketing_Fundamentals_From_Strategy_to_ROI_1_st_edition_Chapter_1_If_as_a_lecturer_you_want_a_free_copy_of_the_book_you_can_contact_me/links/60abcfc4299bf1031fc8304c/largepreview.png" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"/>
                   <div class="card-body">
+                    <h3 class="card-text">Digital Marketing</h3>
                     <p class="card-text">Digital marketing adalah suatu usaha untuk mempromosikan sebuah merek dengan menggunakan media digital yang dapat menjangkau konsumen secara tepat waktu, pribadi, dan relevan.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
